tests/implicit_instantiation/implicit_instantiation.exp
Error -------------------------------------------------------------------------------------------- class_static.js:13:11

Cannot use function type [1] with fewer than 2 type arguments. [missing-type-arg]

   class_static.js:13:11
   13| const y = OneTarg<string>(); // error, incorrect amount of args
                 ^^^^^^^

References:
   class_static.js:10:10
   10|   static <K, V>(): OneTarg<K, V>;
                ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:5:19

Cannot assign `identity<...>(...)` to `y` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:5:19
   5| const y: string = identity<_>(3); // Error, string incompatible with number.
                        ^^^^^^^^^^^^^^

References:
   test.js:5:31
   5| const y: string = identity<_>(3); // Error, string incompatible with number.
                                    ^ [1]
   test.js:5:10
   5| const y: string = identity<_>(3); // Error, string incompatible with number.
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:10:11

Cannot call `unimplementable` because `T` [1] is underconstrained by call of `unimplementable` [2]. Either add explicit
type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   test.js:10:11
   10| const a = unimplementable<_>(); // Ok, not exported. Leaks a tvar, errors in LTI and pinned to any
                 ^^^^^^^^^^^^^^^

References:
   test.js:7:34
    7| declare function unimplementable<T>(): {x: T};
                                        ^ [1]
   test.js:10:11
   10| const a = unimplementable<_>(); // Ok, not exported. Leaks a tvar, errors in LTI and pinned to any
                 ^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot cast `z` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:17:2
   17| (z: string); // Error, number lower bound string upper bound
        ^

References:
   test.js:16:23
   16| const z = identity<_>(3); // Give z a lower bound.
                             ^ [1]
   test.js:17:5
   17| (z: string); // Error, number lower bound string upper bound
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:22:6

Cannot call `unimplementable` because `T` [1] is underconstrained by call of `unimplementable` [2]. Either add explicit
type arguments or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   test.js:22:6
   22|   x: unimplementable<_>(), // Error in LTI, requires concrete annot
            ^^^^^^^^^^^^^^^

References:
   test.js:7:34
    7| declare function unimplementable<T>(): {x: T};
                                        ^ [1]
   test.js:22:6
   22|   x: unimplementable<_>(), // Error in LTI, requires concrete annot
            ^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:6

Cannot call `readOnly` because `T` [1] is underconstrained by call of `readOnly` [2]. Either add explicit type arguments
or cast the expression to your expected type. [underconstrained-implicit-instantiation]

   test.js:23:6
   23|   y: readOnly<_>(), // Error in LTI
            ^^^^^^^^

References:
   test.js:19:27
   19| declare function readOnly<T>(): {+x :T};
                                 ^ [1]
   test.js:23:6
   23|   y: readOnly<_>(), // Error in LTI
            ^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------- under_constrained_speculation.js:1:2

Cannot cast `0` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   under_constrained_speculation.js:1:2
   1| (0: string); // error: intentially left here to ensure that implicit instantiation
       ^ [1]

References:
   under_constrained_speculation.js:1:5
   1| (0: string); // error: intentially left here to ensure that implicit instantiation
          ^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:14:1

Cannot call `C` because `K` [1] is underconstrained by call of `C` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:14:1
   14| C(any_); // okay, we infer C<any, any>
       ^

References:
   under_constrained_speculation.js:5:11
    5|   static <K, V>(_: void): C<K, V>;
                 ^ [1]
   under_constrained_speculation.js:14:1
   14| C(any_); // okay, we infer C<any, any>
       ^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:14:1

Cannot call `C` because `V` [1] is underconstrained by call of `C` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:14:1
   14| C(any_); // okay, we infer C<any, any>
       ^

References:
   under_constrained_speculation.js:5:14
    5|   static <K, V>(_: void): C<K, V>;
                    ^ [1]
   under_constrained_speculation.js:14:1
   14| C(any_); // okay, we infer C<any, any>
       ^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:15:1

Cannot call `C` because `K` [1] is underconstrained by call of `C` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:15:1
   15| C(undefined); // error branches are under-constrained for the first overload,
       ^

References:
   under_constrained_speculation.js:5:11
    5|   static <K, V>(_: void): C<K, V>;
                 ^ [1]
   under_constrained_speculation.js:15:1
   15| C(undefined); // error branches are under-constrained for the first overload,
       ^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:15:1

Cannot call `C` because `V` [1] is underconstrained by call of `C` [2]. Either add explicit type arguments or cast the
expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:15:1
   15| C(undefined); // error branches are under-constrained for the first overload,
       ^

References:
   under_constrained_speculation.js:5:14
    5|   static <K, V>(_: void): C<K, V>;
                    ^ [1]
   under_constrained_speculation.js:15:1
   15| C(undefined); // error branches are under-constrained for the first overload,
       ^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:19:1

Cannot call `foo` because `K` [1] is underconstrained by call of `foo` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:19:1
   19| foo(any_); // error first overload selected, but K, V are under-constrained
       ^^^

References:
   under_constrained_speculation.js:9:22
    9| declare function foo<K, V>(_: void): C<K, V>;
                            ^ [1]
   under_constrained_speculation.js:19:1
   19| foo(any_); // error first overload selected, but K, V are under-constrained
       ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:19:1

Cannot call `foo` because `V` [1] is underconstrained by call of `foo` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:19:1
   19| foo(any_); // error first overload selected, but K, V are under-constrained
       ^^^

References:
   under_constrained_speculation.js:9:25
    9| declare function foo<K, V>(_: void): C<K, V>;
                               ^ [1]
   under_constrained_speculation.js:19:1
   19| foo(any_); // error first overload selected, but K, V are under-constrained
       ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:20:1

Cannot call `foo` because `K` [1] is underconstrained by call of `foo` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:20:1
   20| foo(undefined); // error branches are under-constrained for the first overload,
       ^^^

References:
   under_constrained_speculation.js:9:22
    9| declare function foo<K, V>(_: void): C<K, V>;
                            ^ [1]
   under_constrained_speculation.js:20:1
   20| foo(undefined); // error branches are under-constrained for the first overload,
       ^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------- under_constrained_speculation.js:20:1

Cannot call `foo` because `V` [1] is underconstrained by call of `foo` [2]. Either add explicit type arguments or cast
the expression to your expected type. [underconstrained-implicit-instantiation]

   under_constrained_speculation.js:20:1
   20| foo(undefined); // error branches are under-constrained for the first overload,
       ^^^

References:
   under_constrained_speculation.js:9:25
    9| declare function foo<K, V>(_: void): C<K, V>;
                               ^ [1]
   under_constrained_speculation.js:20:1
   20| foo(undefined); // error branches are under-constrained for the first overload,
       ^^^^^^^^^^^^^^ [2]



Found 15 errors
